Closed
Bug 1259802
Opened 10 years ago
Closed 10 years ago
Add type replacement annotations to simplify rust binding generation for nsStyleStruct.h
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla48
Tracking | Status | |
---|---|---|
firefox48 | --- | fixed |
People
(Reporter: emilio, Assigned: emilio)
References
Details
Attachments
(1 file, 1 obsolete file)
3.17 KB,
patch
|
bholley
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:45.0) Gecko/20100101 Firefox/45.0
Build ID: 20160319124722
Steps to reproduce:
Patch to generate replacements for some structs which generate complex bindings in nsStyleStruct.h
Assignee | ||
Comment 1•10 years ago
|
||
Comment 2•10 years ago
|
||
Comment on attachment 8734842 [details] [diff] [review]
Add ns* structs replacement
Review of attachment 8734842 [details] [diff] [review]:
-----------------------------------------------------------------
r=me with that fix.
::: layout/style/nsStyleStruct.h
@@ +102,3 @@
>
> +/**
> + * If something in this types or the assertions below needs to change, ask
I would add an explanation here that these are used to map Gecko types to simpler layout-equivalent types to aid rust binding generation.
Attachment #8734842 -
Flags: review+
Updated•10 years ago
|
Assignee: nobody → ecoal95
Updated•10 years ago
|
Blocks: stylo
Summary: stylo: Required patch for sane rust bindings → Add type replacement annotations to simplify rust binding generation for nsStyleStruct.h
Assignee | ||
Comment 3•10 years ago
|
||
Attachment #8734842 -
Attachment is obsolete: true
Attachment #8734849 -
Flags: review?(bobbyholley)
Assignee | ||
Comment 4•10 years ago
|
||
(In reply to Bobby Holley (busy) from comment #2)
> Comment on attachment 8734842 [details] [diff] [review]
> Add ns* structs replacement
>
> Review of attachment 8734842 [details] [diff] [review]:
> -----------------------------------------------------------------
>
> r=me with that fix.
>
> ::: layout/style/nsStyleStruct.h
> @@ +102,3 @@
> >
> > +/**
> > + * If something in this types or the assertions below needs to change, ask
>
> I would add an explanation here that these are used to map Gecko types to
> simpler layout-equivalent types to aid rust binding generation.
Done
Updated•10 years ago
|
Attachment #8734849 -
Flags: review?(bobbyholley) → review+
Comment 6•10 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 10 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in
before you can comment on or make changes to this bug.
Description
•