Bug 1259802: Add type replacement annotations to simplify rust binding generation for nsStyleStruct.h, r=bholley

This way or bindings are sane, and we don't have to bring in a lot of
the gfx code.